/* $Id$ */

/**
 *  @file
 *  Changelog for Embedded Video Field (emvideo).
 */

August 2009
-----------
* #457608: Remove Veoh provider (brianbrown/Manuel Garcia).
* Implement hook_emvideo_PROVIDER_content_generate: YouTube, Blip.TV,
  and Archive.org (aaron).

===============
 DRUPAL-6--1-4
===============

August 2009
-----------
 * #370882: Fix menu creation (jdwfly/aaron).
 * #542994: Remove emvideo_requirements (chenba/Rob Loach).
 * #397802: blip.tv enclosures seem to not be showing up (jjkiesch).
 * #457452: Remove API info from Guba (aaron).
 * Don't allow spaces in YouTube URL (aaron).

DRUPAL-6--1-3
=============

July 2009
---------
 * Fix emvideo_requirements (mikey_p/Dave Reid).
 * Add a 'return_url' option to thumbnails (aaron).
 * Add ability to play YouTube videos with JW FLV Player (aaron).
 * Rebuild theme in update (aaron).
 * Add $options to YouTube theme (aaron).

June 2009
---------
 * Absolute URL's for custom URL's (aaron).
 * #207224 Fix amphersands in HTML (aaron/seanr).

DRUPAL-6--1-2
=============

May 2009
---------
 * Redo #351145 and fix autoplay for blip in new player (aaron).
 * Pass $node to $options in theme functions (aaron).
 * Pass $options to theme_video_cck_bliptv_flash (aaron).
 * #351145 After upgrade, blip.tv videos show: Error: Invalid Feed (aaron).
 * #459272 - fixed MySpace povider file with new api (junedkazi/alex).
 * #374201 - jastraat fixed problem with $enablejsapi param.
 * #405596 - ahem85 fixed problem with regex in zzz_custom_url.inc
 * #363287 - q0rban fixed problem with emvideo.install
 * #466608 - fixed path to cck's content.admin.inc

March 2009
----------
 * We added the archive.org provider file, so need to rebuild the theme (aaron).
 * Example provider file (aaron).
 * Some video codes have a '/' character, so we have to accomodate in the URL (aaron).
 * Replace play button w/ 8bit PNG (BrightLoudNoise).
 * Fix conflict w/ inline preview & thickbox/lightbox2 (aaron).
 * Fix inline preview size (aaron).
