@@ -22,8 +22,8 @@ define('EMVIDEO_DEFAULT_THUMBNAIL_HEIGHT', 90);
 function emvideo_menu() {
   $items = module_invoke('emfield', 'provider_menus', 'emvideo');
 
-  $items['emvideo/thickbox'] = array(
-    'page callback' => 'emvideo_thickbox',
+  $items['emvideo/modal'] = array(
+    'page callback' => 'emvideo_modal',
     'access arguments' => array('access content'),
     'type' => MENU_CALLBACK,
   );
@@ -75,9 +75,21 @@ function emvideo_theme() {
       'arguments' => array('field' => NULL, 'item' => NULL, 'formatter' => NULL, 'node' => NULL, 'options' => array()),
       'file' => 'emvideo.theme.inc',
     ),
+    'emvideo_modal_generic' => array(
+        'arguments' => array('field' => NULL, 'item' => NULL, 'formatter' => NULL, 'node' => NULL, 'options' => array()),
+        'file' => 'emvideo.theme.inc'
+    ),
     'emvideo_thickbox' => array(
-      'arguments' => array('field' => NULL, 'item' => NULL, 'formatter' => NULL, 'node' => NULL, 'options' => array()),
-      'file' => 'emvideo.theme.inc',
+        'arguments' => array('field' => NULL, 'item' => NULL, 'formatter' => NULL, 'node' => NULL, 'options' => array()),
+        'file' => 'emvideo.theme.inc'
+    ),
+    'emvideo_lightbox2' => array(
+        'arguments' => array('field' => NULL, 'item' => NULL, 'formatter' => NULL, 'node' => NULL, 'options' => array()),
+        'file' => 'emvideo.theme.inc'
+    ),
+    'emvideo_shadowbox' => array(
+        'arguments' => array('field' => NULL, 'item' => NULL, 'formatter' => NULL, 'node' => NULL, 'options' => array()),
+        'file' => 'emvideo.theme.inc'
     ),
     'emvideo_formatter_video_video' => array(
         'arguments' => array('element' => NULL),
@@ -100,6 +112,14 @@ function emvideo_theme() {
         'file' => 'emvideo.theme.inc'
     ),
     'emvideo_formatter_thickbox' => array(
+        'arguments' => array('element' => NULL),
+        'file' => 'emvideo.theme.inc'
+    ),
+    'emvideo_formatter_lightbox2' => array(
+        'arguments' => array('element' => NULL),
+        'file' => 'emvideo.theme.inc'
+    ),
+    'emvideo_formatter_shadowbox' => array(
         'arguments' => array('element' => NULL),
         'file' => 'emvideo.theme.inc'
     ),
@@ -179,7 +199,7 @@ function emvideo_field($op, &$node, $field, &$items, $teaser, $page) {
  * Implementation of hook_field_formatter_info()
  */
 function emvideo_field_formatter_info() {
-  $types = array('emvideo', );
+  $types = array('emvideo');
   $formats = array(
     'default' => array(
       'label' => t('Default'),
@@ -212,11 +232,23 @@ function emvideo_field_formatter_info() {
   );
 
   // Add thickbox formatter if thickbox module exists.
-  if (module_exists('thickbox') || module_exists('lightbox2')) {
+  if (module_exists('thickbox')) {
     $formats['thickbox'] = array(
-      'label' => t('Thickbox/Lightbox2: Image Thumbnail -> Full Size Video'),
+      'label' => t('Thickbox: Image Thumbnail -> Full Size Video'),
       'field types' => $types,
       );
+  }
+  if (module_exists('lightbox2')) {
+    $formats['lightbox2'] = array(
+      'label' => t('Lightbox2: Image Thumbnail -> Full Size Video'),
+      'field types' => $types,
+    );
+  }
+  if (module_exists('shadowbox')) {
+    $formats['shadowbox'] = array(
+      'label' => t('Shadowbox: Image Thumbnail -> Full Size Video'),
+      'field types' => $types,
+    );
   }
 
   return $formats;
@@ -444,9 +476,11 @@ function emvideo_handler_arg_provider($op, &$query, $argtype, $arg = '') {
 }
 
 /**
- * Page callback for emvideo/thickbox.
- * This will display our video in a modal window defined by the thickbox module.
+ * Page callback for emvideo/thickbox/shadowbox.
+ * This will display our video in a modal window defined by the corresponding
+ * modal module.
  * As it's a direct callback, it displays no HTML other than the video.
+ * @TODO: What about swfobject for YouTube and others?
  *  @param $nid
  *    The video node's nid.
  *  @param $width
@@ -462,7 +496,7 @@ function emvideo_handler_arg_provider($op, &$query, $argtype, $arg = '') {
  *  @param $extra
  *    Some video codes have a '/' character, so we have to accomodate in the URL.
  */
-function emvideo_thickbox($nid, $width, $height, $field_name, $provider, $code, $extra = NULL) {
+function emvideo_modal($nid, $width, $height, $field_name, $provider, $code, $extra = NULL) {
   $field = array();
   $field['widget']['video_width'] = $width;
   $field['widget']['video_height'] = $height;
@@ -471,7 +505,8 @@ function emvideo_thickbox($nid, $width, $height, $field_name, $provider, $code, 
   $node = node_load($nid);
 
   // If the URL has an extra bit, then append that to the video code.
-  if (isset($extra)) {
+  // This broke shadowbox, which needs index.php to register as iFrame.
+  if (isset($extra) && ($extra != 'index.php')) {
     $code .= '/'. $extra;
   }
   foreach ($node->{$field_name} as $video) {
