@@ -3,17 +3,21 @@
 /**
  *  @file
  *  This will use jQuery AJAX to replace a thumbnail with its video version.
- *
- *  Drupal.settings.emvideo.thumbs will contain an array with the following:
- *
  */
-
-if (Drupal.jsEnabled) {
-  $(document).ready(function(){
+Drupal.behaviors.emvideoThumbnailReplacement = function(context) {
+  // On load, add a span for the play button to any required thumbnails.
+  $('a.emvideo-thumbnail-replacement:not(.emvideo-thumbnail-replacement-processed)', context).addClass('emvideo-thumbnail-replacement-processed').each(function() {
     if (Drupal.settings.emvideo.thumbnail_overlay) {
-      $(".emvideo-thumbnail-replacement").prepend("<span></span>");
+      // Add the play button.
+      $(this).prepend("<span></span>");
     }
-    $('.emvideo-thumbnail-replacement').click(function() {
+  });
+
+  // Inline videos will click through to the video.
+  $('a.emvideo-modal-emvideo:not(.emvideo-modal-emvideo-processed)', context).addClass('emvideo-modal-emvideo-processed').each(function() {
+    // When clicking the image, load the video with AJAX.
+    // Note that this only happens if this is not a lightbox.
+    $(this).click(function() {
       // 'this' won't point to the element when it's inside the ajax closures,
       // so we reference it using a variable.
       var element = this;
@@ -37,4 +41,4 @@ if (Drupal.jsEnabled) {
       return false;
     });
   });
-}
+};
